sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/Fleet_Services_Handover_Checklist__c.object-meta.xml
<CustomObject>
    <label>Fleet Services Handover Checklist</label>
    <nameField>
        <label>Fleet Services Handover Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Services Handover Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>