sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/A_C_Heater_Defroster__c.field-meta.xml
<CustomField>
    <fullName>A_C_Heater_Defroster__c</fullName>
    <label>A/C Heater/Defroster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>