sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/All_Door_Locks__c.field-meta.xml
<CustomField>
    <fullName>All_Door_Locks__c</fullName>
    <label>All Door Locks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>