sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dents</fullName>
            </value>
            <value>
                <fullName>No dents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>