sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Brake_Pedal__c.field-meta.xml
<CustomField>
    <fullName>Brake_Pedal__c</fullName>
    <label>Brake Pedal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Not Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>