sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Clean_Interior__c.field-meta.xml
<CustomField>
    <fullName>Clean_Interior__c</fullName>
    <label>Clean Interior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Not Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>