sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Name</label>
    <referenceTo>Employee_Drivers__c</referenceTo>
    <relationshipLabel>Fleet Services Handover Checklist</relationshipLabel>
    <relationshipName>Fleet_Services_Handover_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>