sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Drivers_Seat__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Seat__c</fullName>
    <label>Drivers Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean &amp; Intact</fullName>
            </value>
            <value>
                <fullName>Not Clean &amp; Intact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>