sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Emergency_Exits_Lights__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Exits_Lights__c</fullName>
    <label>Emergency Exits/Lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>