sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Emergency_Reflectors__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Reflectors__c</fullName>
    <label>Emergency Reflectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>