sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/End_shift_Date__c.field-meta.xml
<CustomField>
    <fullName>End_shift_Date__c</fullName>
    <label>End shift Date</label>
    <type>DateTime</type>
</CustomField>