sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Fan_Belts__c.field-meta.xml
<CustomField>
    <fullName>Fan_Belts__c</fullName>
    <label>Fan Belts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Not Okay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>