sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/First_Aid_Accident_Kit__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Accident_Kit__c</fullName>
    <label>First Aid/Accident Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>