sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Gauge_Oil_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Oil_Pressure__c</fullName>
    <label>Gauge:Oil Pressure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>