sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Glove_Compartment__c.field-meta.xml
<CustomField>
    <fullName>Glove_Compartment__c</fullName>
    <label>Glove Compartment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Not Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>