sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Horn__c.field-meta.xml
<CustomField>
    <fullName>Horn__c</fullName>
    <label>Horn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Not Okay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>