sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/NEMA_organic_waste_sticker__c.field-meta.xml
<CustomField>
    <fullName>NEMA_organic_waste_sticker__c</fullName>
    <label>NEMA organic waste sticker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>