sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/NTSA_Inspection_Sticker__c.field-meta.xml
<CustomField>
    <fullName>NTSA_Inspection_Sticker__c</fullName>
    <label>NTSA Inspection Sticker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>