sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Odometer_Finish__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Finish__c</fullName>
    <label>Odometer Finish</label>
    <length>10</length>
    <type>Text</type>
</CustomField>