sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Odometer_Start__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Start__c</fullName>
    <label>Odometer Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>