sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Passenger_seats__c.field-meta.xml
<CustomField>
    <fullName>Passenger_seats__c</fullName>
    <label>Passenger seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean &amp; Intact</fullName>
            </value>
            <value>
                <fullName>Not clean &amp; Intact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>