sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Reflectors__c.field-meta.xml
<CustomField>
    <fullName>Reflectors__c</fullName>
    <label>Reflectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Not Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>