sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Reverse_Beeper__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Beeper__c</fullName>
    <label>Reverse Beeper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Not Okay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>