sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Seatbelts__c.field-meta.xml
<CustomField>
    <fullName>Seatbelts__c</fullName>
    <label>Seatbelts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Not Okay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>