sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Not Intact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>