sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Side_rear_view_mirror__c.field-meta.xml
<CustomField>
    <fullName>Side_rear_view_mirror__c</fullName>
    <label>Side &amp; rear view mirror</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Not Okay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>