sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Start_shift_date__c.field-meta.xml
<CustomField>
    <fullName>Start_shift_date__c</fullName>
    <label>Start shift date</label>
    <type>DateTime</type>
</CustomField>