sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Tires_Lug_nuts__c.field-meta.xml
<CustomField>
    <fullName>Tires_Lug_nuts__c</fullName>
    <label>Tires/Lug nuts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tightened</fullName>
            </value>
            <value>
                <fullName>Not Tightened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>