sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <label>Vehicle Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>