sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Registration</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Fleet Services Handover Checklist</relationshipLabel>
    <relationshipName>Fleet_Services_Handover_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>