sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Water_Oil_Leaks__c.field-meta.xml
<CustomField>
    <fullName>Water_Oil_Leaks__c</fullName>
    <label>Water/Oil Leaks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>