sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Windshield__c.field-meta.xml
<CustomField>
    <fullName>Windshield__c</fullName>
    <label>Windshield</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cracked</fullName>
            </value>
            <value>
                <fullName>Not Cracked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>