sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/fields/Wipers_Washers__c.field-meta.xml
<CustomField>
    <fullName>Wipers_Washers__c</fullName>
    <label>Wipers/Washers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>