sfSandBoxCode/force-app/main/default/objects/Fleet_Services_Handover_Checklist__c/recordTypes/Fleet_Services_Handover_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Services_Handover_Checklist</fullName>
    <active>true</active>
    <label>Fleet Services Handover Checklist</label>
</RecordType>